; ModuleID = '/home/carl/AnghaBench/linux/fs/ceph/extr_inode.c_ceph_free_inode.c'
source_filename = "/home/carl/AnghaBench/linux/fs/ceph/extr_inode.c_ceph_free_inode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.ceph_inode_info = type { i32 }

@ceph_inode_cachep = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ceph_free_inode(%struct.inode* %0) #0 {
  %2 = alloca %struct.inode*, align 8
  %3 = alloca %struct.ceph_inode_info*, align 8
  store %struct.inode* %0, %struct.inode** %2, align 8
  %4 = load %struct.inode*, %struct.inode** %2, align 8
  %5 = call %struct.ceph_inode_info* @ceph_inode(%struct.inode* %4)
  store %struct.ceph_inode_info* %5, %struct.ceph_inode_info** %3, align 8
  %6 = load %struct.ceph_inode_info*, %struct.ceph_inode_info** %3, align 8
  %7 = getelementptr inbounds %struct.ceph_inode_info, %struct.ceph_inode_info* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @kfree(i32 %8)
  %10 = load i32, i32* @ceph_inode_cachep, align 4
  %11 = load %struct.ceph_inode_info*, %struct.ceph_inode_info** %3, align 8
  %12 = call i32 @kmem_cache_free(i32 %10, %struct.ceph_inode_info* %11)
  ret void
}

declare dso_local %struct.ceph_inode_info* @ceph_inode(%struct.inode*) #1

declare dso_local i32 @kfree(i32) #1

declare dso_local i32 @kmem_cache_free(i32, %struct.ceph_inode_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
